--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,12 @@ dependencies:
   cupertino_icons: ^0.1.3
   firebase_storage: ^4.0.0
   cloud_firestore: ^0.14.0+2
+  firebase_auth: ^0.18.1+2
   uuid: ^2.2.2
   url_launcher: ^5.5.3
   shimmer: ^1.1.1
   google_maps_flutter: ^1.0.2
+  email_validator: ^1.0.6
 
 
 dev_dependencies:
