add firebase info user

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="Bích Long Co"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:requestLegacyExternalStorage="true"
+        >
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBUhoLqjORjfER934kP-OFPRKNKFoWKlvA"/>
         <activity
